force-app/main/default/objects/Pulse360_Seller_Play__mdt/Pulse360_Seller_Play__mdt.object-meta.xml
<CustomObject>
    <description>Maps seller action signals to solution-family, outreach, and specialist guidance for Pulse360 seller workflows.</description>
    <label>Pulse360 Seller Play</label>
    <pluralLabel>Pulse360 Seller Plays</pluralLabel>
</CustomObject>