force-app/main/default/objects/Pulse360_Seller_Play__mdt/fields/Buying_Group_Gap__c.field-meta.xml
<CustomField>
    <fullName>Buying_Group_Gap__c</fullName>
    <description>Guidance about which buying-group roles appear missing for the matched seller play.</description>
    <label>Buying Group Gap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>