force-app/main/default/objects/Pulse360_Seller_Play__mdt/fields/Match_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Match_Keyword__c</fullName>
    <description>Keyword used to match a generated seller action to a configured Pulse360 seller play.</description>
    <inlineHelpText>Lower-case keyword used to bind action targets or reasoning to a seller play.</inlineHelpText>
    <label>Match Keyword</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>