force-app/main/default/objects/Pulse360_Seller_Play__mdt/fields/Match_Priority__c.field-meta.xml
<CustomField>
    <fullName>Match_Priority__c</fullName>
    <description>Priority used to decide which seller play wins when multiple keywords match.</description>
    <label>Match Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>