force-app/main/default/objects/Pulse360_Seller_Play__mdt/fields/Outreach_Objective__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Objective__c</fullName>
    <description>Short outreach objective or meeting goal for the matched seller play.</description>
    <label>Outreach Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>