force-app/main/default/objects/Pulse360_Seller_Play__mdt/fields/Recommended_Play__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Play__c</fullName>
    <description>Seller-facing play label shown in the action pack.</description>
    <label>Recommended Play</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>