force-app/main/default/objects/Pulse360_Seller_Play__mdt/fields/Solution_Family__c.field-meta.xml
<CustomField>
    <fullName>Solution_Family__c</fullName>
    <description>Canonical solution family associated with the seller play.</description>
    <label>Solution Family</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>