force-app/main/default/objects/Pulse360_Seller_Play__mdt/fields/Specialist_Route__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Route__c</fullName>
    <description>Suggested specialist or team route for the matched seller play.</description>
    <label>Specialist Route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>