force-app/main/default/objects/Pulse360_Seller_Play__mdt/fields/Target_Entity_Hint__c.field-meta.xml
<CustomField>
    <fullName>Target_Entity_Hint__c</fullName>
    <description>Target legal entity or subsidiary to highlight when the seller play matches.</description>
    <label>Target Entity Hint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>